# 110-kV-planning-with-DLR

./: .gitignore  Geoplot.py  Makefile  Prueba 1.py  README.md  Timeseries Tampere rural weather.py  new ploting test.py  powerflow_1year_autumn_subnet_dlr_only.py  powerflow_1year_autumn_subnet_dlr_only_structured_v2.py  powerflow_1year_autumn_subnet_dlr_only_v2.py  powerflow_1year_seasons.py  powerflow_1year_seasons_vc_structured_v2.py  powerflow_1year_seasons_vc_v2.py  powerflow_1year_single_season_subnet_dlr.py  powerflow_1year_single_season_subnet_dlr_structured_v2.py  powerflow_1year_single_season_subnet_dlr_v2.py  powerflow_1year_spring_subnet_dlr_only.py  powerflow_1year_spring_subnet_dlr_only_structured_v2.py  powerflow_1year_spring_subnet_dlr_only_v2.py  powerflow_1year_summer_subnet_dlr_only.py  powerflow_1year_summer_subnet_dlr_only_structured_v2.py  powerflow_1year_summer_subnet_dlr_only_v2.py  powerflow_1year_winter_subnet_dlr_only.py  powerflow_1year_winter_subnet_dlr_only_structured_v2.py  powerflow_1year_winter_subnet_dlr_only_v2.py  prueba.py  pyproject.toml
src/dlr/: analysis.py  boiler.py  cli.py  config.py  dlr_calc.py  export.py  network.py  plots.py  powerflow.py  seasons.py  study.py  subnet.py  topology.py  weather.py
tests/: test_analysis.py  test_dlr_calc.py  test_network.py  test_subnet.py
